fix(FF-6771): closeDropdown onPlatformChange on mobile, drawer links padding, hide project select if not passed

--- a/packages/header/src/helperComponents/DrawerMenu/components/DrawerMenuDesktop/styles.module.scss
+++ b/packages/header/src/helperComponents/DrawerMenu/components/DrawerMenuDesktop/styles.module.scss
@@ -86,6 +86,10 @@
   flex-direction: column;
   gap: 8px;
   padding: 0 styles-tokens-element.$dimension-4m styles-tokens-element.$dimension-4m styles-tokens-element.$dimension-2m;
+
+  &[data-padding-top] {
+    padding-top: styles-tokens-element.$dimension-4m;
+  }
 }
 
 .searchItem {
